--- a/src/about.html
+++ b/src/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hakkımda - Sefa</title>
+    <title>About - λ Lambda Theme</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
