--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sefa</title>
+    <title>λ Lambda Theme</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
