--- a/src/about.html
+++ b/src/about.html
@@ -27,7 +27,7 @@
         <div class="footer-div">
             <span>
                 <span class="left">
-                2021 © Sefa Çiçekli - λ Lambda theme from <a href="https://github.com/sefacicekli">GitHub</a>
+                2021 © Sefa Çiçekli - λ Lambda theme from <a href="https://github.com/sefacicekli/lambda">GitHub</a>
                 </span>
                 <span class="right">
                 <a href="https://github.com/sefacicekli"><i class="fab fa-github"></i></a>
